# nlp-project

./: .gitignore  Prefixes.txt  PrefixesMeans.txt  Suffixes.txt  SuffixesMeans.txt  gg.txt  main.py  pyproject.toml
