[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = ["IjatAyam <ijat191999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-trans-new = "^1.1.9"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
